feat:路由跳转练习

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,11 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
-  jverify: 2.2.4
+#  jverify: 2.2.4
 
   get: ^4.6.1
+
+  sp_util: ^2.0.3
 
 dev_dependencies:
   flutter_test:
