--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -41,6 +41,11 @@ dependencies:
 
   # loading
   flutter_easyloading: ^3.0.3
+
+  # 高德
+  amap_location_flutter_plugin:
+    git:
+      url: https://github.com/amap-demo/amap-location-flutter.git
 
 dev_dependencies:
   flutter_test:
